--- a/src/main/frontend/src/public/index.html
+++ b/src/main/frontend/src/public/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
+    <base href="/">
+    <title>Angular With Webpack</title>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Expense Tracker</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <div id="app"></div>
+<my-app>Loading...</my-app>
 </body>
 </html>
